--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
    <div class="principal " id="home">
       <div class=" cta ">
-         <h1 class="titul">PagDePrueba</h1>
+         <h1 class="titul">Pagina DePrueba</h1>
          <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque cupiditate .</h4>
          <a  href="https://open.spotify.com/artist/0SnyKkoyBaB2fG8IJH4xmU" class="btn spoti">Esto es un boton.Uno piola</a>
       </div>
